--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -30,6 +30,8 @@ dependencies:
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.0
+  animated_text_kit: ^4.2.1
+  flutter_sound: ^8.1.4
 
 dev_dependencies:
   flutter_test:
@@ -62,17 +64,20 @@ flutter:
   # "family" key with the font family name, and a "fonts" key with a
   # list giving the asset and other descriptors for the font. For
   # example:
-  # fonts:
-  #   - family: Schyler
-  #     fonts:
-  #       - asset: fonts/Schyler-Regular.ttf
-  #       - asset: fonts/Schyler-Italic.ttf
-  #         style: italic
-  #   - family: Trajan Pro
-  #     fonts:
-  #       - asset: fonts/TrajanPro.ttf
-  #       - asset: fonts/TrajanPro_Bold.ttf
-  #         weight: 700
+  fonts:
+    - family: OdibeeSans-Regular
+      fonts:
+        - asset: fonts/OdibeeSans-Regular.ttf
+          style: italic
+    - family: Acme-Regular
+      fonts:
+        - asset: fonts/Acme-Regular.ttf
+    - family: SeymourOne-Regular
+      fonts:
+        - asset: fonts/SeymourOne-Regular.ttf
+    - family: Ultra-Regular
+      fonts:
+        - asset: fonts/Ultra-Regular.ttf
   #
   # For details regarding fonts from package dependencies,
   # see https://flutter.dev/custom-fonts/#from-packages
